--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ test:
   variables:
     DB_CONNECTION: pgsql
     DB_HOST: postgres
-    DB_DATABASE: weather_station
+    DB_DATABASE: weather_station_test
     DB_USERNAME: postgres
-    DB_PASSWORD: test
+    DB_PASSWORD: 1234
   before_script:
     - apt-get update && apt-get install -y unzip libpq-dev postgresql-client
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
